# my-blog-app

backend/: .env  .gitignore  Cargo.toml
backend/migrations/: 20250213051922_create_users_table.sql  20250216025707_create_posts_table.sql  20250216025821_create_comments_table.sql  20250216025842_create_likes_table.sql
backend/src/: main.rs
backend/src/handlers/: auth.rs  comments.rs  likes.rs  mod.rs  posts.rs
backend/src/models/: comment.rs  like.rs  mod.rs  post.rs  user.rs
backend/src/routes/: auth.rs  comments.rs  likes.rs  mod.rs
backend/src/services/: mod.rs
backend/src/utils/: auth.rs  jwt.rs  mod.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: HorizontalCard.vue  Navbar.vue  UserDropdownMenu.vue  UserProfileCard.vue  VerticalCard.vue
frontend/src/components/icons/: HamburgerMenuIcon.vue  RightArrowIcon.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: authStore.js  authStore.ts  commentStore.ts  postStore.js  postStore.ts  userStore.js
frontend/src/utils/: deltaRenderer.ts  sanitizeHtml.ts  stringUtils.ts
frontend/src/views/: CreateView.vue  HomeView.vue  LoginView.vue  PostView.vue  RegisterView.vue
